# ACMMP

./: .gitignore  ACMMP.cpp  ACMMP.cu  ACMMP.h  CMakeLists.txt  acmmp_definitions.cpp  acmmp_definitions.h  build_docker.sh  main.cpp  main_ACMMP.cpp  main_fusion.cpp  pSampler.cpp  pSampler.h  plans.txt
docker/: Dockerfile  Dockerfile-base  acmmp_docker.py  build_docker_base.sh  build_docker_full.sh  run_example_acmmp.sh
misc/: additonal_install_notes.md  setting_up_nvidia_containers.md
python_scripts/: DTU_full_prior_analysis.py  clean_acmmp_Dirs.py  colmap2mvsnet_acm.py  display_dtu_cams.py  dtu_statistics.py  evaluate_dtu_structure.py  make_alex.py  make_blank_random.py  matlab_analysis.py  refactor_dir.py  run_dtu_analysis.py  run_linear_dtu_analysis.py  run_single_analysis.py  select_dtu_cams.py  visualise_DTU_metrics.py  visualise_dtu_metrics_2.py  visualise_point_number.py  visualise_results.py
recons/sketch/alex_recon_test/: pair.txt
src/: ACMMP.cpp  ACMMP.cu  ACMMP.h  CMakeLists.txt  acmmp_definitions.cpp  acmmp_definitions.h  main_ACMMP.cpp  main_fusion.cpp
